# python-project-lvl2

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  dict_diff.py  diff_tree.py  file_to_dict.py  files_diff.py  generate.py  json.py  parsing.py  plain.py  stringify.py  stylish.py
gendiff/converters/: file_to_dict.py
gendiff/diffs/: tree.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  builder.py  json.py  plain.py  stylish.py
gendiff/parsers/: cli.py  cli_parsing.py
gendiff/scripts/: gendiff.py
tests/: result_json.txt  test_flat.py  test_gendiff.py
tests/fixtures/: file3.yaml  file4.yml  result_json_form.json
