[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Shows difference between two files (in json or yaml format. Provides 3 optional types of result presentation."
authors = ["Dddarknight <9801677@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["diff", "difference", "json", "yaml", "yml"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing"
]
repository = "https://github.com/Dddarknight/python-project-lvl2"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = ">=3.9.2,<=4.0.1"
pytest = ">=6.2.5,<=7.1.2"
pytest-cov = ">=2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
